Google Sheets 통합 및 검색 기능 구현
- Google Sheets API 연동 완료
- 한글 검색 디바운싱 처리
- 실시간 데이터 동기화
- 검색 및 필터링 기능
- 반응형 UI 디자인
- 에러 처리 및 로딩 상태

--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:debug": "vite --debug",
     "build": "vite build",
     "lint": "eslint .",
+    "lint:watch": "eslint . --watch",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
